# pLannotate

./: README.md  pyproject.toml  test_full_workflow.py  test_simple_workflow.py
plannotate/: infernal.py
